[package]
name = "ulmensa"
version = "0.1.0"
edition = "2021"

[dependencies]
time = "0.3.37"
once_cell = "1.20.2"
scraper = "0.22.0"
reqwest = { version = "0.12", default-features=false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
regex = "1.11.1"
prettytable = "0.10.0"
