[package]
name = "ulmensa"
version = "0.1.0"
edition = "2021"
license = "GPL"
authors = ["structix"]
description = "A command-line utility for retrieving and displaying current meal plans from the University of Ulm canteen."
repository = "https://github.com/STRUCTiX/ulmensa"
readme = "README.md"
keywords = ["cli", "canteen", "university", "ulm"]


[dependencies]
time = "0.3.37"
once_cell = "1.20.2"
scraper = "0.22.0"
reqwest = { version = "0.12", default-features=false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"]}
regex = "1.11.1"
prettytable = "0.10.0"
clap = { version = "4.5.26", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "ulmensa_lib"
path = "src/lib.rs"

[[bin]]
name = "ulmensa"
path = "src/main.rs"
