[package]
name = "ulmensa"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["structix"]
description = "A command-line utility for retrieving and displaying current meal plans from the University of Ulm canteen."
repository = "https://github.com/STRUCTiX/ulmensa"
readme = "README.md"
keywords = ["cli", "canteen", "university", "ulm"]


[dependencies]
time = "0.3.37"
once_cell = "1.21.3"
scraper = "0.24.0"
reqwest = { version = "0.12", default-features=false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
regex = "1.12.2"
prettytable = "0.10.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "ulmensa_lib"
path = "src/lib.rs"

[[bin]]
name = "ulmensa"
path = "src/main.rs"
